Starred working. refactored getmailbox
