# backend/api/openapi.yaml
@@ -130,6 +130,40 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /v0/starred/{id}:
+    put:
+      description: Changes the starred status of the email by id
+      responses:
+        200:
+          description: Success
+        500:
+          description: Internal Server Error
+        404:
+          description: Email not found
+        default:
+          description: Unexpected Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      parameters:
+      - name: id
+        in: path
+        description: The UUID of the email to retrieve
+        required: true
+        schema:
+          type: string
+        style: simple
+      - name: star
+        in: query
+        description: The new starred status of the email
+        required: true
+        schema:
+          type: boolean
+        style: form
+      
+
+
 components:
   schemas:
     Error:
