# backend/src/app.js
@@ -34,6 +34,7 @@ app.get('/v0/mail', mail.getMailbox);
 app.get('/v0/mail/:id', mail.getEmail);
 app.post('/v0/mail/', mail.postEmail);
 app.put('/v0/mail/:id', mail.putEmail);
+app.put('/v0/starred/:id', mail.putStarred);
 
 app.use((err, req, res, next) => {
   res.status(err.status).json({
